Completed Lauds for the Dead, and updated spacing and page numbers for Matins for the Dead.

--- a/Lauds/lauds_of_the_dead.tex
+++ b/Lauds/lauds_of_the_dead.tex
@@ -103,4 +103,711 @@
 \gregorioscore{antiphon_exsultabunt_domino}
 \textit{The bones that are humbled shall rejoice in the Lord.}
 
+%%
+
+\vspace{2cm}
+
+\textit{Hear my prayer, O Lord; all flesh shall come to Thee.}
+\gresetinitiallines{1}
+\gregorioscore{antiphon_exaudi_domine}
+
+\subsection*{Psalm 64}
+ 
+\gresetinitiallines{1}
+\gregorioscore{intonation_psalm_64}
+
+\begin{latinenglishsection} 
+ \latinenglish{
+ 	2. Exáudi oratiónem \textbf{me}am:~* ad te omnis \textit{ca}\textit{ro} \textbf{vé}niet.
+
+	3. Verba iniquórum prævaluérunt \textbf{su}per nos:~* et impietátibus nostris tu pro\textit{pi}\textit{ti}\textbf{á}beris.
+	
+	4. Beátus quem elegísti et assump\textbf{sís}ti:~* inhabitábit in á\textit{tri}\textit{is} \textbf{tu}is.
+	
+	5. Replébimur in bonis domus tuæ, sanctum est templum \textbf{tu}um:~* mirábile in \textit{æ}\textit{qui}\textbf{tá}te.
+	
+	6. Exáudi nos, Deus salutáris \textbf{nos}ter:~* spes ómnium fínium terræ et in \textit{ma}\textit{ri} \textbf{lon}ge.
+	
+	7. Prǽparans montes in virtúte tua, accínctus pot\textbf{én}tia:~* qui contúrbas profúndum maris sonum flúc\textit{tu}\textit{um} \textbf{e}jus.
+	
+	8. Turbabúntur Gentes, et timébunt qui hábitant términos a signis \textbf{tu}is:~* éxitus matutíni, et véspere \textit{de}\textit{lec}\textbf{tá}bis.
+	
+	9. Visitásti terram, et inebriásti \textbf{e}am:~* multiplicásti locuple\textit{tá}\textit{re} \textbf{e}am.
+	
+	10. Flumen Dei replétum est aquis; parásti cibum il\textbf{ló}rum:~* quóniam ita est præpará\textit{ti}\textit{o} \textbf{e}jus.
+	
+	11. Rivos ejus inébria multíplica genímina \textbf{e}jus:~* in stillicídiis ejus lætá\textit{bi}\textit{tur} \textbf{gér}minans.
+	
+	12. Benedíces corónæ anni benignitátis \textbf{tu}æ:~* et campi tui replebúntur \textit{u}\textit{ber}\textbf{tá}te.
+	
+	13. Pinguéscent speciósa de\textbf{sér}ti:~* et exsultatióne colles \textit{ac}\textit{cin}\textbf{gén}tur.
+	
+	14. Indúti sunt aríetes óvium et valles abundábunt fru\textbf{mén}to:~* clamábunt, étenim \textit{hym}\textit{num} \textbf{di}cent.
+	
+	15. Requiem æternam dona eis, \textbf{Do}mine~* Et lux perpetua lu\textit{ceat} \textbf{e}is.
+ }{
+ 	1. A Hymn, O God, becometh Thee in Sion: and a vow shall be paid to Thee in Jerusalem.
+ 	
+ 	2. O, hear my prayer, all flesh shall come to Thee. 
+ 	
+ 	3. The words of teh wicked have prevailed against us: and Thou wilt pardon our transgressions.
+ 	
+ 	4. Blessed is he whom Thou hast chosen, and taken to Thee: he shall dwell in Thy courts.
+ 	
+ 	5. We shall be filled with the good things of Thy house: holy is Thy temple, wonderful in justice.
+ 	
+ 	6. Hear us, O God our Savior, who art the hope of all the ends of the earth, and in the sea afar off.
+ 	
+ 	7. Thou who preparest the mountains by Thy strength, being girded with power: who troublest the depths of the sea, the noise of its waves.
+ 	
+ 	8. The gentiles shall be troubled, and they that dwell in the uttermost borders shall be afraid at Thy signs: Thou shalt make the outgoings of the morning and of the evening to be joyful.
+ 	
+ 	9. Thou hast visited the earth, and hast plentifully watered it: Thou hast many ways enriched it.
+ 	
+ 	10. The river of God is filled with water, Thou hast prepared their food: for so is its preparation.
+ 	
+ 	11. Fill up plentifully the streams thereof, multiply its fruits: it shall spring up and rejoice in its showers.
+ 	
+ 	12. Thou shalt bless with Thy goodness the crown of the year: and Thy fields shall be fillded with plenty.
+ 	
+ 	13. The beautiful places of the wilderness shall grow fat: and the hills shall be girded about with joy.
+ 	
+ 	14. The rams of the flock are clothed, and the vales shall abound with corn: they shall shout, yea, they shall sing a hymn.
+ 	
+ 	15. Eternal rest, grant unto them O Lord, and let perpetual light shine upon them.
+ }
+\end{latinenglishsection}
+
+\gresetinitiallines{1}
+\gregorioscore{antiphon_exaudi_domine}
+\textit{Hear my prayer, O Lord; all flesh shall come to Thee.}
+
+%%
+
+\vspace{2cm}
+
+\textit{Thy right hand, O Lord, hath received me.}
+\gresetinitiallines{1}
+\gregorioscore{antiphon_me_suscepit}
+
+\subsection*{Psalm 62}
+ 
+\gresetinitiallines{1}
+\gregorioscore{intonation_psalm_62}
+
+\begin{latinenglishsection} 
+ \latinenglish{
+ 	2. Sitívit in te \textbf{á}nima \textbf{me}a,~* quam multiplíciter tibi \textbf{ca}ro \textbf{me}a.
+
+	3. In terra desérta, et ínvia, et inaquósa:~{\color{red}\GreDagger} sic in sancto ap\textbf{pá}rui \textbf{ti}bi,~* ut vidérem virtútem tuam, et \textbf{gló}riam \textbf{tu}am.
+	
+	4. Quóniam mélior est misericórdia tua \textbf{su}per \textbf{vi}tas:~* lábia \textbf{me}a lau\textbf{dá}bunt te.
+	
+	5. Sic benedícam te in \textbf{vi}ta \textbf{me}a:~* et in nómine tuo levábo \textbf{ma}nus \textbf{me}as.
+	
+	6. Sicut ádipe et pinguédine repleátur \textbf{á}nima \textbf{me}a:~* et lábiis exsultatiónis lau\textbf{dá}bit os \textbf{me}um.
+	
+	7. Si memor fui tui super stratum meum,~{\color{red}\GreDagger} in matutínis medi\textbf{tá}bor \textbf{in} te:~* quia fuísti ad\textbf{jú}tor \textbf{me}us.
+	
+	8. Et in velaménto alárum tuárum exsultábo,~{\color{red}\GreDagger} adhǽsit ánima \textbf{me}a \textbf{post} te:~* me suscépit \textbf{déx}tera \textbf{tu}a.
+	
+	9. Ipsi vero in vanum quæsiérunt ánimam meam,~{\color{red}\GreDagger} introíbunt in inferi\textbf{ó}ra \textbf{ter}ræ:~* tradéntur in manus gládii, partes \textbf{vúl}pium \textbf{e}runt.
+	
+	10. Rex vero lætábitur in Deo,~{\color{red}\GreDagger} laudabúntur omnes qui \textbf{ju}rant in \textbf{e}o:~* quia obstrúctum est os loquénti\textbf{um} in\textbf{í}qua.
+	
+	11. Requiem æternam dona \textbf{e}is, \textbf{Do}mine~* Et lux perpetua \textbf{lu}ceat \textbf{e}is.
+ }{
+ 	1. O God, my God: to Thee I watch from the morning light.
+ 	
+ 	2. For Thee my soul hath thirsted: for Thee my flesh, O how much!
+ 	
+ 	3. In a desert land, and where there is no way, and no water: so in the sanctuary have I cme before Thee, to see Thy power and Thy glory.
+ 	
+ 	4. For Thy mercy is better than life: Thee my lips shall praise.
+ 	
+ 	5. Thus will I bless Thee my life long: and in Thy name I will lift up my hands.
+ 	
+ 	6. Let my soul be filled as with marrow and fatness: and my mouth shall praise Thee with joyful lips.
+ 	
+ 	7. If I have remembered Thee upon my bed, I will meditate on Thee in the morning: because Thou hast been my helper.
+ 	
+ 	8. And I will rejoice under the covert of Thy winds: my soul hath stuck close to Thee: Thy right hand hath upheld me.
+ 	
+ 	9. But they have sought my life in vain, they shall go into the lower parts of the earth: they shall be put to the sword, they shall be the portions of foxes.
+ 	
+ 	10. But the king shall rejoice in God, all they that swear by Him shall be praised: because the mouth of them that speak wicked things is stopped.
+ 	
+ 	11. Eternal rest, grant unto them O Lord, and let perpetual light shine upon them.
+ }
+\end{latinenglishsection}
+
+\gresetinitiallines{1}
+\gregorioscore{antiphon_me_suscepit}
+\textit{Thy right hand, O Lord, hath received me.}
+
+%%
+
+\vspace{2cm}
+
+\textit{From the gate of hell deliver my soul, O Lord.}
+\gresetinitiallines{1}
+\gregorioscore{antiphon_a_porta_inferi}
+
+\subsection*{Canticle of Ezechias - Is. 38:10-20}
+
+\gresetinitiallines{1}
+\gregorioscore{intonation_canticum_ezechiae}
+
+\begin{latinenglishsection} 
+ \latinenglish{
+ 	2. Quæsívi resíduum annórum me\textbf{ó}rum.~* Dixi: Non vidébo Dóminum Deum in terra \textit{vi}\textbf{vén}tium.
+
+	3. Non aspíciam hóminem \textbf{ul}tra,~* et habitatórem \textit{qui}\textbf{é}tis.
+	
+	4. Generátio mea abláta est, et convolúta est \textbf{a} me,~* quasi tabernáculum \textit{pas}\textbf{tó}rum.
+	
+	5. Præcísa est velut a texénte, vita mea:~{\color{red}\GreDagger} dum adhuc ordírer, suc\textbf{cí}dit me:~* de mane usque ad vésperam fí\textit{ni}\textbf{es} me.
+	
+	6. Sperábam usque ad \textbf{ma}ne,~* quasi leo sic contrívit ómnia os\textit{sa} \textbf{me}a:
+	
+	7. De mane usque ad vésperam fínies me:~{\color{red}\GreDagger} sicut pullus hirúndinis sic cla\textbf{má}bo,~* meditábor ut \textit{co}\textbf{lúm}ba:
+	
+	8. Attenuáti sunt óculi \textbf{me}i,~* suspiciéntes in \textit{ex}\textbf{cél}sum.
+	
+	9. Dómine, vim pátior, respónde \textbf{pro} me.~* Quid dicam, aut quid respondébit mihi, cum ip\textit{se} \textbf{fé}cerit?
+	
+	10. Recogitábo tibi omnes annos \textbf{me}os~* in amaritúdine áni\textit{mæ} \textbf{me}æ.
+	
+	11. Dómine, si sic vívitur, et in tálibus vita spíritus mei,~{\color{red}\GreDagger} corrípies me, et vivifi\textbf{cá}bis me.~* Ecce, in pace amaritúdo mea a\textit{ma}\textbf{rís}sima:
+	
+	12. Tu autem eruísti ánimam meam ut non per\textbf{í}ret:~* projecísti post tergum tuum ómnia peccá\textit{ta} \textbf{me}a.
+	
+	13. Quia non inférnus confitébitur tibi,~{\color{red}\GreDagger} neque mors lau\textbf{dá}bit te:~* non exspectábunt qui descéndunt in lacum, veritá\textit{tem} \textbf{tu}am.
+	
+	14. Vivens vivens ipse confitébitur tibi, sicut et ego \textbf{hó}die:~* pater fíliis notam fáciet veritá\textit{tem} \textbf{tu}am.
+	
+	15. Dómine, salvum \textbf{me} fac~* et psalmos nostros cantábimus cunctis diébus vitæ nostræ in do\textit{mo} \textbf{Dó}mini.
+	
+	16. Requiem æternam dona eis, \textbf{Do}mine~* Et lux perpetua luce\textit{at} \textbf{e}is.
+ }{
+ 	1. I said: In the midst of my days, I shall go to the gates of hell.
+ 	
+ 	2. I sought for the residue of my years. I said: I shall not see the Lord God in the land of the living.
+ 	
+ 	3. I shall behold man no more, nor the inhabitant of rest.
+ 	
+ 	4. My generation is at an end, and it is rolled away from me as a shepherd's tent.
+ 	
+ 	5. My life is cut off as by a weaver; whilst I was yet but beginning He cut me off: from morning even to night Thou wilt make an end of me
+ 	
+ 	6. I hoped till morning: as a lion so hath He broken all my bones.
+ 	
+ 	7. From morning even to night Thou wilt make an end of me: I will cry like a young swallow, I will meditate like a dove.
+ 	
+ 	8. My eyes are weakened, looking upward. 
+ 	
+ 	9. Lord, I suffer violence, answer Thou for me: What shall I say, or what will He answer for me, whereas He himself hath done it?
+ 	
+ 	10. I will recount to Thee all my years, in the bitterness of my soul.
+ 	
+ 	11. O Lord, if man's life is such, and the life of my spirit in such things as these, Thou wilt correct me and make me live. Behold, in peace is my bitterness and msot bitter.
+ 	
+ 	12. But Thou hast delivered my soul, that it should not perish: Thou hast cast all my sins behind Thy back.
+ 	
+ 	13. For hell will not thank Thee, neither will death praise Thee: nor will they that go down into the pit look for Thy truth.
+ 	
+ 	14. The living, the living, he shall give praise to Thee, as I do this day: the father shall make Thy truth known to the chldren.
+ 	
+ 	15. O Lord, save me: and we will sing our psalms all the days of our life in the house of the Lord.
+ 	
+ 	16. Eternal rest, grant unto them O Lord, and let perpetual light shine upon them.
+ }
+\end{latinenglishsection}
+
+\gresetinitiallines{1}
+\gregorioscore{antiphon_a_porta_inferi}
+\textit{From the gate of hell deliver my soul, O Lord.}
+
+%%
+
+\vspace{2cm}
+
+\textit{Let every spirit praise the Lord.}
+\gresetinitiallines{1}
+\gregorioscore{antiphon_omnis_spiritus}
+
+\subsection*{Psalm 150}
+
+\gresetinitiallines{1}
+\gregorioscore{intonation_psalm_150}
+
+\begin{latinenglishsection} 
+ \latinenglish{
+ 	2. Laudáte eum in vir\textbf{tú}tibus \textbf{e}jus:~* laudáte eum secúndum multitúdinem magni\textbf{tú}dinis \textbf{e}jus.
+
+	3. Laudáte eum in \textbf{so}no \textbf{tu}bæ:~* laudáte eum in psaltéri\textbf{o}, et \textbf{cí}thara.
+	
+	4. Laudáte eum in týmpa\textbf{no}, et \textbf{cho}ro:~* laudáte eum in \textbf{chor}dis, et \textbf{ór}gano.
+	
+	5. Laudáte eum in cýmbalis benesonántibus:~{\color{red}\GreDagger} laudáte eum in cýmbalis jubi\textbf{la}ti\textbf{ó}nis:~* omnis spíritus \textbf{lau}det \textbf{Dó}minum.
+	
+	6. Requiem æternam dona \textbf{e}is, \textbf{Do}mine~* Et lux perpetua luc\textbf{e}at \textbf{e}is.
+ }{
+ 	1. Praise ye the Lord in His holy places: praise Him in the firmament of His power.
+ 	
+ 	2. Praise Him in His mighty acts: praise Him according to the multitude of His greatness.
+ 	
+ 	3. Praise Him with the sound of the trumpet: praise Him with psaltery and harp.
+ 	
+ 	4. Praise Him with timbrel and choir: praise Him with strings and organs.
+ 	
+ 	5. Praise Him upon the high-sounding cymbals, praise Him upon cymbals of joy: let every spirit praise the Lord.
+ 	
+ 	6. Eternal rest, grant unto them O Lord, and let perpetual light shine upon them.
+ }
+\end{latinenglishsection}
+
+\gresetinitiallines{1}
+\gregorioscore{antiphon_omnis_spiritus}
+\textit{Let every spirit praise the Lord.}
+
+\begin{latinenglishsection} 
+\latinenglish{
+	{\color{red}\Vbar.} Aud\'{i}vi vocem de c\ae lo dic\'{e}ntem mihi:
+	
+	{\color{red}\Rbar.} Beati m\'{o}rtui qui in D\'{o}mino mori\'{u}ntur.
+}{
+	{\color{red}\Vbar.} I heard a voice from heaven, saying to me,
+	
+	{\color{red}\Rbar.} Blessed are the dead that die in the Lord.
+}
+\end{latinenglishsection}
+
+%%
+
+\vspace{2cm}
+
+\textit{I am the resurrection and the life; he that believeth in Me, though he be dead, shall live; and every one that liveth and believeth in Me shall never die.}
+\gresetinitiallines{1}
+\gregorioscore{antiphon_ego_sum}
+
+\subsection*{Canticle of Zachary - Luke 1:67-69}
+
+\gresetinitiallines{0}
+\gregorioscore{intonation_canticum_zechariae}
+
+\begin{latinenglishsection} 
+\latinenglish{
+ 	2. Et eréxit cornu salútis \textbf{no}bis:~* in domo David, púe\textit{ri} \textbf{su}i.
+
+	3. Sicut locútus est per os sanc\textbf{tó}rum,~* qui a sǽculo sunt, prophetá\textit{rum} \textbf{e}jus:
+	
+	4. Salútem ex inimícis \textbf{nos}tris,~* et de manu ómnium, qui \textit{o}\textbf{dé}runt nos.
+	
+	5. Ad faciéndam misericórdiam cum pátribus \textbf{nos}tris:~* et memorári testaménti su\textit{i} \textbf{sanc}ti.
+	
+	6. Jusjurándum, quod jurávit ad Abraham patrem \textbf{nos}trum,~* datúrum \textit{se} \textbf{no}bis:
+	
+	7. Ut sine timóre, de manu inimicórum nostrórum libe\textbf{rá}ti,~* serviá\textit{mus} \textbf{il}li.
+	
+	8. In sanctitáte, et justítia coram \textbf{ip}so,~* ómnibus dié\textit{bus} \textbf{nos}tris.
+	
+	9. Et tu, puer, Prophéta Altíssimi vo\textbf{cá}beris:~* præíbis enim ante fáciem Dómini, paráre vi\textit{as} \textbf{e}jus:
+	
+	10. Ad dandam sciéntiam salútis plebi \textbf{e}jus:~* in remissiónem peccatórum \textit{e}\textbf{ó}rum:
+	
+	11. Per víscera misericórdiæ Dei \textbf{nos}tri:~* in quibus visitávit nos, óriens \textit{ex} \textbf{al}to:
+	
+	12. Illumináre his, qui in ténebris, et in umbra mortis \textbf{se}dent:~* ad dirigéndos pedes nostros in vi\textit{am} \textbf{pa}cis.
+	
+	13. Requiem æternam dona eis, \textbf{Do}mine~* Et lux perpetua luce\textit{at} \textbf{e}is.
+ }{
+ 	1. Blessed be the Lord God of Israel: because He hath visited and wrought the redemption of His people.
+ 	
+ 	2. And He hath raised up for us a horn of salvation in the house of David His servant:
+ 	
+ 	3. As He spoke by the mouth of His holy prophets, who are of old.
+ 	
+ 	4. Deliverance from our enemies, and from the hand of all who hate us.
+ 	
+ 	5. To perform mercy to our fathers: and to rememebr His holy covenant.
+ 	
+ 	6. The oath which He swore to Abraham our father, that He would grant to us.
+ 	
+ 	7. That being delivered from the hand of our enemies, we may serve Him without fear:
+ 	
+ 	8. In holiness and justice before Him all our days.
+ 	
+ 	9. And thou, child, shalt be called the prophet of the Most High: for thou shalt go before the face of the Lord, to prepare His ways:
+ 	
+ 	10. To give knowledge of salvation to His people, unto the remission of their sins:
+ 	
+ 	11. Through the tender mercy of our God: in which the Orient from on high hath visited us:
+ 	
+ 	12. To enlighten those that sit in darkness, and in the shadow of death: to direct our feet into the way of peace.
+ 	
+ 	13. Eternal rest, grant unto them O Lord, and let perpetual light shine upon them.
+ }
+\end{latinenglishsection}
+
+\gresetinitiallines{1}
+\gregorioscore{antiphon_ego_sum}
+\textit{I am the resurrection and the life; he that believeth in Me, though he be dead, shall live; and every one that liveth and believeth in Me shall never die.}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{center}
+{\color{red}\textit{The Pater Noster and the following prayers are said kneeling. The Officiant leads the Pater Noster.}}
+\end{center}
+
+\begin{latinenglishsection} 
+\latinenglish{
+	Pater Noster, ... {\color{red}secreto}
+	
+	{\color{red}\Vbar.} Et ne nos ind\'{u}cas in tentati\'{o}nem.
+	
+	{\color{red}\Rbar.} Sed l\'{i}bera nos a malo.
+	
+	{\color{red}\Vbar.} A porta \'{i}nferi.
+	
+	{\color{red}\Rbar.} Erue, D\'{o}mine, \'{a}nimam eius (\'{a}nimas e\'{o}rum).
+	
+	{\color{red}\Vbar.} Requi\'{e}sca(n)t in pace.
+	
+	{\color{red}\Rbar.} Amen.
+	
+	{\color{red}\Vbar.} D\'{o}mine, ex\'{a}udi orati\'{o}nem meam.
+	
+	{\color{red}\Rbar.} Et clamor meus ad te v\'{e}niat.
+}{
+	Our Father, ... {\color{red}silent until}
+	
+	{\color{red}\Vbar.} And lead us not into temptation.
+	
+	{\color{red}\Rbar.} But deliver us from evil.
+	
+	{\color{red}\Vbar.} From the gates of hell.
+	
+	{\color{red}\Rbar.} Deliver their souls, O Lord.
+	
+	{\color{red}\Vbar.} May they rest in peace.
+	
+	{\color{red}\Rbar.} Amen.
+	
+	{\color{red}\Vbar.} O Lord, hear my prayer.
+	
+	{\color{red}\Rbar.} And let my cry come unto Thee.
+}
+\end{latinenglishsection}
+
+\begin{center}
+{\color{red}\textit{If a priest or deacon presides:}}
+\end{center}
+
+\begin{latinenglishsection} 
+\latinenglish{
+	{\color{red}\Vbar.} D\'{o}minus vob\'{i}scum.
+	
+	{\color{red}\Rbar.} Et cum spiritu tuo.
+	
+	Or\'{e}mus.
+}{
+	{\color{red}\Vbar.} The Lord be with you.
+	
+	{\color{red}\Rbar.} And with thy spirit.
+}
+\end{latinenglishsection}
+
+\begin{center}
+{\color{red}\textit{The appropriate Collect is said from below, followed by the rest on the bottom of page 12.}}
+\end{center}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\section*{Proper Collects for the Dead}
+
+\subsection*{\color{red}Prayer on the Day of the Decease and Burial}
+
+\begin{latinenglishsection}
+\latinenglish{
+	Absolve, qu\'{\ae}sumus, D\'{o}mine, \'{a}nimam f\'{a}muli tui (f\'{a}mul\ae\ tu\ae) {\color{red}N.}, ut def\'{u}nctus (def\'{u}ncta) s\'{\ae}culo tibi vivat: et, qu\ae per fragilit\'{a}tem carnis hum\'{a}na\\ conversati\'{o}ne comm\'{i}sit, tu v\'{e}nia misericord\'{i}ssim\ae\\ piet\'{a}tis abst\'{e}rge. Per D\'{o}minum nostrum Jesum Christum F\'{i}lium tuum, qui tecum vivit et regnat in unit\'{a}te Sp\'{i}ritus Sancti, Deus, per \'{o}mnia s\'{\ae}cula s\ae cul\'{o}rum.
+	
+	{\color{red}\Rbar.} Amen.
+}{
+	Absolve, we beseech Thee, O lord, the soul of Thy servant {\color{red}N.}, that being dead to the world he (or she) may live to Thee; and whatever he (or she) has committed through human frailty, do Thou wipe away by the pardon of Thy most merciful goodness. Through Our Lord Jesus Christ, Thy Son, who liveth and reigneth with Thee in the unity of the Holy Ghost, God, world without end.
+	
+	{\color{red}\Rbar.} Amen.
+}
+\end{latinenglishsection}
+
+{\color{red}\textit{The following prayer may also be used:}}
+
+\begin{latinenglishsection}
+\latinenglish{
+	Deus, cui pr\'{o}prium est miser\'{e}ri semper et p\'{a}rcere, te s\'{u}pplices exor\'{a}mus pro \'{a}nima f\'{a}muli tui {\color{red}N.} (f\'{a}mul\ae\ tu\ae {\color{red}N.}), quam h\'{o}die de hoc s\'{\ae}culo migr\'{a}re juss\'{i}sti: ut non tradas eam in manus inim\'{i}mici, neque oblivisc\'{a}ris in finem, sed j\'{u}beas eam a sanctis Angelis s\'{u}scipi, et ad p\'{a}triam parad\'{i}si perd\'{u}ci; ut, quia in te sper\'{a}vit et cr\'{e}diditm non p\oe nas inf\'{e}rni sust\'{i}neatm sed g\'{a}udia \ae t\'{e}rna poss\'{i}deat. Per Dóminum nostrum Iesum Christum Fílium tuum, qui tecum vivit et regnat in unitáte Spíritus Sancti, Deus, per ómnia s\'{\ae}cula sæculórum.
+	
+	{\color{red}\Rbar.} Amen.
+}{
+	O God, whose property it is always to have mercy and to spare, we humbly beseech Thee for the soul of Thy servant {\color{red}N.}, which today Thou hast taken out of this world: not to deliver it into the hands of the enemy, nor to forget it forever;but to command the holy angels to receive it, and to conduct it to the heavenly country; that since it has believed and hoped in Thee, it may not suffer the pains of hell, but possess eternal joys. Through Our Lord Jesus Christ Thy Son, who liveth and reigneth with Thee in the unity of the Holy Ghost, God, world without end.
+	
+	{\color{red}\Rbar.} Amen.
+}
+\end{latinenglishsection}
+
+\subsection*{\color{red}Prayer for the Third, Seventh, or Thirtieth Day after Burial}
+
+\begin{latinenglishsection}
+\latinenglish{
+	Qu\ae sumus, D\'{o}mine, ut \'{a}nimam f\'{a}muli tui {\color{red}N.},\\ (f\'{a}mul\ae\ tu\ae\ {\color{red}N.}), cujus depositi\'{o}nis diem t\'{e}rtium ({\color{red}vel} s\'{e}ptimum, {\color{red}vel} trig\'{e}simum) commemor\'{a}mus, sanct\'{o}rum atque elect'{o}rum tu\'{o}rum larg\'{i}ri dign\'{e}ris cons\'{o}rtium: et rorem miseric\'{o}rdi\ae tu\ae per\'{e}nnem inf\'{u}ndas. Per Dóminum nostrum Iesum Christum Fílium tuum, qui tecum vivit et regnat in unitáte Spíritus Sancti, Deus, per ómnia s\'{\ae}cula sæculórum.
+	
+	{\color{red}\Rbar.} Amen.
+}{
+	Vouchsafe, we beseech Thee, O Lord, to admit the soul of Thy servant {\color{red}N.}, the third (seventh or thirtieth) day of whose burial we commemorate, into the fellowship of Thy saints and elect, and sprinkle upon it the perpetual dew of Thy mercy. Through Our Lord Jesus Christ Thy Son, who liveth and reigneth with Thee in the unity of the Holy Ghost, God, world without end.
+	
+	{\color{red}\Rbar.} Amen.
+}
+\end{latinenglishsection}
+
+\subsection*{\color{red}Prayer on the Anniversary of Burial}
+
+\begin{latinenglishsection}
+\latinenglish{
+	Deus, indulgenti\'{a}rum D\'{o}mine, da \'{a}nim\ae\ f\'{a}muli tui {\color{red}N.},\\ (f\'{a}mul\ae\ tu\ae\ {\color{red}N.}, {\color{red}vel} anim\'{a}bus famul\'{o}rum famalur\'{u}mque tu\'{a}rum), cujus (quorum) annivers\'{a}rium depositi\'{o}nis diem commemor\'{a}mus, refrig\'{e}rii sedem, qui\'{e}tis\\ beatit\'{u}dinem, et l\'{u}minis clarit\'{a}tem. Per Dóminum nostrum Iesum Christum Fílium tuum, qui tecum vivit et regnat in unitáte Spíritus Sancti, Deus, per ómnia s\'{\ae}cula sæculórum.
+	
+	{\color{red}\Rbar.} Amen.
+}{
+	O God, the Lord of mercy and pardon, grant to the soul of Thy servant {\color{red}N.} ({\color{red}or} servants), the anniversary of whose burial we commemorate, the place of refreshment, the blessedness of rest, and the brightness of light. Through Our Lord Jesus Christ Thy Son, who liveth and reigneth with Thee in the unity of the Holy Ghost, God, world without end.
+	
+	{\color{red}\Rbar.} Amen.
+}
+\end{latinenglishsection}
+
+\vfill\pagebreak
+
+\subsection*{\color{red}For a Deceased Pope}
+
+\begin{latinenglishsection}
+\latinenglish{
+	Deus, qui inter summos sacerd\'{o}tes f\'{a}mulum tuum {\color{red}N.} ineff\'{a}bili tua dispositi\'{o}ne connumer\'{a}ri volu\'{i}sti: pr\ae sta, qu\'{\ae}sumus; ut qui Unig\'{e}niti F\'{i}lii tui vices in terris ger\'{e}bat, sanct\'{o}rum tu\'{o}rum Pont\'{i}ficum cons\'{o}rtio perp'{e}tuo aggreg\'{e}tur. Per e\'{u}ndem D\'{o}minum nostrum Iesum Christum Fílium tuum, qui tecum vivit et regnat in unitáte Spíritus Sancti, Deus, per ómnia s\'{\ae}cula sæculórum.
+	
+	{\color{red}\Rbar.} Amen.
+}{
+	O God, by whose favor Thy servant {\color{red}N.} was raised to the dignity of the sovereign pontiff, grant, we beseech Thee, that he may be admitted to the eternal society of Thy holy pontiffs in heaven. Through the same Our Lord Jesus Christ Thy Son, who liveth and reigneth with Thee in the unity of the Holy Ghost, God, world without end.
+	
+	{\color{red}\Rbar.} Amen.
+}
+\end{latinenglishsection}
+
+\begin{center}
+\par\noindent\rule{0.5\textwidth}{0.4pt}
+\end{center}
+
+\subsection*{\color{red}For a Deceased Bishop}
+
+\begin{latinenglishsection}
+\latinenglish{
+	Deus, qui inter apost\'{o}licos sacerd\'{o}tes f\'{a}mulum tuum {\color{red}N.} (f\'{a}mulos tuos {\color{red}N.} et {\color{red}N.}) pontific\'{a}lis fec\'{i}sti dignit\'{a}te vig\'{e}re: pr\ae sta, qu\'{\ae}sumus, ut e\'{o}rum quoque perp\'{e}tuo aggreg\'{e}(n)tur cons\'{o}rtio. Per D\'{o}minum nostrum Iesum Christum Fílium tuum, qui tecum vivit et regnat in unitáte Spíritus Sancti, Deus, per ómnia s\'{\ae}cula sæculórum.
+	
+	{\color{red}\Rbar.} Amen.
+}{
+	O God, by whose favor Thy servant(s) {\color{red}N.} (and {\color{red}N.}) was raised to the dignity of a bishop, and honored with the apostolic functions, grant, we beseech Thee, that he (they) may be admitted to the eternal society of Thy apostles in heaven. Through the same Lord Jesus Christ Thy Son, who liveth and reigneth with Thee in the unity of the Holy Ghost, God, world without end.
+	
+	{\color{red}\Rbar.} Amen.
+}
+\end{latinenglishsection}
+
+\subsubsection*{\color{red}\textit{For a Cardinal-Bishop, say:}}
+
+\begin{latinenglishsection}
+\latinenglish{
+	f\'{a}mulum tuum {\color{red}N.} Ep\'{i}scopum Cardin\'{a}lem pontific\'{a}li fec\'{i}sti dign\'{i}tate vig\'{e}re.
+}{
+	O God, by whose favor Thy servant {\color{red}N.} was raised to the dignity of Cardinal Bishop.
+}
+\end{latinenglishsection}
+
+\subsubsection*{\color{red}\textit{For a Cardinal-Priest or Cardinal-Deacon who was also a Bishop, say:}}
+
+\begin{latinenglishsection}
+\latinenglish{
+	f\'{a}mulum tuum {\color{red}N.} Presb\'{y}terum ({\color{red}vel} Diaconum)\\ Cardin\'{a}lem pontific\'{a}li fec\'{i}sti dignit\'{a}te vig\'{e}re.
+}{
+	O God, by whose favor Thy servant {\color{red}N.}. was raised to the dignity of Cardinal Priest.
+}
+\end{latinenglishsection}
+
+\subsubsection*{\color{red}\textit{For a Cardinal-Priest who was not a Bishop, say:}}
+\begin{latinenglishsection}
+\latinenglish{
+	f\'{a}mulum tuum {\color{red}N.} Presb\'{y}terum Cardin\'{a}lem sacerdot\'{a}li fec\'{i}sti dignit\'{a}te vig\'{e}re.
+}{
+	O God, by whose favor Thy servant {\color{red}N.}. was raised to the dignity of Cardinal Priest.
+}
+\end{latinenglishsection}
+
+\subsubsection*{\color{red}\textit{For a Cardinal-Deacon who was a priest, say:}}
+\begin{latinenglishsection}
+\latinenglish{
+	f\'{a}mulum tuum {\color{red}N.} Di\'{a}conum Cardin\'{a}lem sacerdot\'{a}li fec\'{i}sti dignit\'{a}te vig\'{e}re.
+}{
+	O God, by whose favor Thy servant {\color{red}N.}. was raised to the dignity of Cardinal Deacon.
+}
+\end{latinenglishsection}
+
+\begin{center}
+\par\noindent\rule{0.5\textwidth}{0.4pt}
+\end{center}
+
+\vfill\pagebreak
+
+\subsection*{\color{red}For a Deceased Priest}
+\begin{latinenglishsection}
+\latinenglish{
+	Deua, qui inter apost\'{o}licus sacerd\'{o}tes f\'{a}mulum tuum {\color{red}N.} (f\'{a}mulus tuos {\color{red}N.} et {\color{red}N.}) sacerdot\'{a}li fec\'{i}sti dignit\'{a}te vig\'{e}re: pr\ae sta, qu\'{\ae}sumus, ut e\'{o}rum quoque perp\'{e}tuo aggreg\'{e}(n)tur cons\'{o}rtio. Per D\'{o}minum nostrum Iesum Christum Fílium tuum, qui tecum vivit et regnat in unitáte Spíritus Sancti, Deus, per ómnia s\'{\ae}cula sæculórum.
+	
+	{\color{red}\Rbar.} Amen.
+}{
+	O God, by whose favor Thy servant(s) {\color{red}N.}. (and {\color{red}N.}) was raised to the priestly dignity, grant, we beseech Thee, that he (they) may be admitted to the eternal society of Thy apostles in heaven. Through the same Lord Jesus Christ Thy Son, who liveth and reigneth with Thee in the unity of the Holy Ghost, God, world without end.
+	
+	{\color{red}\Rbar.} Amen.
+}
+\end{latinenglishsection}
+
+\subsubsection*{\color{red}\textit{Another Collect for a Deceased Priest}}
+\begin{latinenglishsection}
+\latinenglish{
+	Pr\ae sta, qu\'{\ae}sumus D\'{o}mine, ut \'{a}nima f\'{a}muli tui {\color{red}N.} sacerd\'{o}tis, quem, in hoc s\'{\ae}culo commor\'{a}ntem, sacris mun\'{e}ribus decor\'{a}sti, in c\ae l\'{e}sti sede glori\'{o}sa semper exs\'{u}ltet. Per D\'{o}minum nostrum Iesum Christum Fílium tuum, qui tecum vivit et regnat in unitáte Spíritus Sancti, Deus, per ómnia s\'{\ae}cula sæculórum.
+	
+	{\color{red}\Rbar.} Amen.
+}{
+	Grant, we beseech Thee, O Lord, that the soul of Thy servant {\color{red}N.}, priest, which whilst he was sojourning in this world, Thou didst adorn with the graces proper to the sacred ministry, may evermore rejoice in the glory of heaven. Through the same Lord Jesus Christ Thy Son, who liveth and reigneth with Thee in the unity of the Holy Ghost, God, world without end.
+	
+	{\color{red}\Rbar.} Amen.
+}
+\end{latinenglishsection}
+
+\begin{center}
+\par\noindent\rule{0.5\textwidth}{0.4pt}
+\end{center}
+
+\subsection*{\color{red}For a Deceased Man}
+\begin{latinenglishsection}
+\latinenglish{
+	Inclina, D\'{o}mine, aurem tuam ad preces nostras, quibus miseric\'{o}rdiam tuam s\'{u}pplices deprec\'{a}mur: ut \'{a}nimam f\'{a}muli tui {\color{red}N.}, quam de hoc s\'{\ae}culo migr\'{a}re juss\'{i}sti, in pacis ac lucis regi\'{o}ne const\'{i}tuas, et sanct\'{o}rum tu\'{o}rum j\'{u}beas esse cons\'{o}rtem. Per D\'{o}minum nostrum Iesum Christum Fílium tuum, qui tecum vivit et regnat in unitáte Spíritus Sancti, Deus, per ómnia s\'{\ae}cula sæculórum.
+	
+	{\color{red}\Rbar.} Amen.
+}{
+	Incline, O Lord, Thine ear to our prayers, in which we humbly beseech Thy mercy; that Thou wouldst place the soul of Thy servant {\color{red}N.}, which Thou hast caused to depart from this world, in the region of peace and light; and unite him in the fellowship of Thy saints. Through the same Lord Jesus Christ Thy Son, who liveth and reigneth with Thee in the unity of the Holy Ghost, God, world without end.
+	
+	{\color{red}\Rbar.} Amen.
+}
+\end{latinenglishsection}
+
+\subsection*{\color{red}For a Deceased Woman}
+\begin{latinenglishsection}
+\latinenglish{
+	Qu\ae sumus, D\'{o}mine, pro tua piet\'{a}te miser\'{e}re \'{a}nim\ae\\ f\'{a}mul\ae tu\ae\ {\color{red}N.}: et a cont\'{a}giis mortalit\'{a}tis ex\'{u}tam, in \ae t\'{e}rn\ae\ salvati\'{o}nis partem resti\'{i}tue. Per D\'{o}minum nostrum Iesum Christum Fílium tuum, qui tecum vivit et regnat in unitáte Spíritus Sancti, Deus, per ómnia s\'{\ae}cula sæculórum.
+	
+	{\color{red}\Rbar.} Amen.
+}{
+	We beseech Thee, O Lord, of Thy goodness to have mercy on the soul of Thy handmaid {\color{red}N.}; do Thou, who hast freed her from the perils of this mortal life, vouchsafe to number her for evermore among the saved. Through the same Lord Jesus Christ Thy Son, who liveth and reigneth with Thee in the unity of the Holy Ghost, God, world without end.
+	
+	{\color{red}\Rbar.} Amen.
+}
+\end{latinenglishsection}
+
+\vfill\pagebreak
+
+\subsection*{\color{red}For Friends and Benefactors}
+\begin{latinenglishsection}
+\latinenglish{
+	Deus, v\'{e}ni\ae\ larg\'{i}tor et hum\'{a}n\ae\ sal\'{u}tis am\'{a}tor: qu\'{\ae}sumus clem\'{e}ntiam tuam; ut nostr\ae\ congregati\'{o}nis fratres, prop\'{i}nquos, et benefact\'{o}res, qui ex hoc s\'{\ae}culo transi\'{e}runt, Beat\'{a} Mar\'{i}a semper V\'{i}rgine interced\'{e}nte cum \'{o}mnibus sanctis tuis, ad perp\'{e}tu\ae\ beatit\'{u}dinis cons\'{o}rtium perven\'{i}re conc\'{e}das. Per D\'{o}minum nostrum Iesum Christum Fílium tuum, qui tecum vivit et regnat in unitáte Spíritus Sancti, Deus, per ómnia s\'{\ae}cula sæculórum.
+	
+	{\color{red}\Rbar.} Amen.
+}{
+	O God, the giver of pardon and lover of human salvation, we beseech Thy clemency to grant that the brethren, relations, and benefactors of our congregation who are departed frmo this world may, by the intercession of the Blessed Mary, ever virgin, and of all Thy saints, attain to the fellowship of eternal beatitude. Through the same Lord Jesus Christ Thy Son, who liveth and reigneth with Thee in the unity of the Holy Ghost, God, world without end.
+	
+	{\color{red}\Rbar.} Amen.
+}
+\end{latinenglishsection}
+
+\subsection*{\color{red}For a Father and Mother Deceased}
+\begin{latinenglishsection}
+\latinenglish{
+	Deus, qui nos patrem et matrem honor\'{a}re pr\ae\ cep\'{i}sti: miser\'{e}re clem\'{e}nter anim\'{a}bus patris et matris me\ae, eor\'{u}mque peccata dim\'{i}tte; meque eos in \ae t\'{e}rn\ae\ clarit\'{a}tis g\'{a}udio fac vid\'{e}re. Per D\'{o}minum nostrum Iesum Christum Fílium tuum, qui tecum vivit et regnat in unitáte Spíritus Sancti, Deus, per ómnia s\'{\ae}cula sæculórum.
+	
+	{\color{red}\Rbar.} Amen.
+}{
+	O God, who hast commanded us to honor our father and mother, have compassion, in Thy mercy, on the souls of my father and mother, and forgive them their sins, and grant that we may meet in the joy of eternal bliss. Through Our Lord Jesus Christ Thy Son, who liveth and reigneth with Thee in the unity of the Holy Ghost, God, world without end.
+	
+	{\color{red}\Rbar.} Amen.
+}
+\end{latinenglishsection}
+
+\subsubsection*{\color{red}\textit{If the office is for several, say:}}
+\begin{latinenglishsection}
+\latinenglish{
+	anim\'{a}bus par\'{e}ntum nostr\'{o}rum {\color{red}and} nosque {\color{red}instead of} meque.
+}{
+	on the souls of our parents, {\color{red}and} we {\color{red}instead of} I.
+}
+\end{latinenglishsection}
+
+\subsubsection*{\color{red}\textit{If it is for the father only, say:}}
+\begin{latinenglishsection}
+\latinenglish{
+	\'{a}nim\ae\ patris mei, {\color{red}or} nostri.
+}{
+	the soul of my ({\color{red}or} our) father.
+}
+\end{latinenglishsection}
+
+\subsubsection*{\color{red}\textit{If it is for the mother only, say:}}
+\begin{latinenglishsection}
+\latinenglish{
+	\'{a}nim\ae\ patris me\ae, {\color{red}or} nostr\ae.
+}{
+	the soul of my ({\color{red}or} our) mother.
+}
+\end{latinenglishsection}
+
+\subsection*{\color{red}For all the Faithful Departed}
+\begin{latinenglishsection}
+\latinenglish{
+	Fidelium, Deus, \'{o}mnium C\'{o}nditor et Red\'{e}mptor, anim\'{a}bus famul\'{o}rum famular\'{u}mque tu\'{a}rum remissi\'{o}nem cunct\'{o}rum tr\'{i}bue peccat\'{o}rum: ut indulg\'{e}ntiam, quam semper optav\'{e}runt, piis supplicati\'{o}nibus consequ\'{a}ntur. Qui vivis et regnas cum Deo Patre, in unit\'{a}te Sp\'{i}ritus Sancti Deus, per \'{o}mnia s\'{\ae}cula s\'{\ae}cula s\ae cul\'{o}rum.
+	
+	{\color{red}\Rbar.} Amen.
+}{
+	O God, the Creator and Redeemer of all the faithful departed, give to the souls of Thy servants, men and women, the remission of all their sins, that by pious supplications they may obtain the pardon which they have always desired. Who livest and reignest with God the Father in the unity of the Holy Spirit, forever and ever.
+	
+	{\color{red}\Rbar.} Amen.
+}
+\end{latinenglishsection}
+
+\vfill\pagebreak
+
+\begin{center}
+{\color{red}\textit{After the collect, there is always said (always in the plural):}}
+\end{center}
+
+\begin{latinenglishsection}
+\latinenglish{
+	{\color{red}\Vbar.} R\'{e}quiem \ae t\'{e}rnam dona eis, D\'{o}mine.
+	
+	{\color{red}\Rbar.} Et lux perp\'{e}tua l\'{u}ceat eis.
+	
+	{\color{red}\Vbar.} Requi\'{e}scant in pace.
+	
+	{\color{red}\Rbar.} Amen.
+}{
+	{\color{red}\Vbar.} Eternal rest grant unto them, O Lord.
+	
+	{\color{red}\Rbar.} And let perpetual light shine upon them.
+	
+	{\color{red}\Vbar.} May they rest in peace.
+	
+	{\color{red}\Rbar.} Amen.
+}
+\end{latinenglishsection}
+
 \end{document}
