--- a/Matins/matins_of_the_dead.tex
+++ b/Matins/matins_of_the_dead.tex
@@ -130,7 +130,7 @@
  
 %%
 
-\hspace{2cm}
+\vspace{2cm}
  
 \textit{Turn, O Lord, and deliver my soul, for there is none in death who will be mindful of Thee.}
 \gresetinitiallines{1}
@@ -193,7 +193,7 @@
  
  %%
  
-\hspace{2cm}
+\vspace{2cm}
  
 \textit{Lest at any time, like a lion, he seize upon my soul, while there is no one to rescue me, nor to save.}
 \gresetinitiallines{1}
@@ -346,7 +346,7 @@
 }
 \end{latinenglishsection}
 
-{\color{red}\textit{If only the First Nocturn is said, then Lauds is immediately recited (pg. ). Otherwise, if Lauds is to be omitted, then continue with the Pater Noster and prayers beginning on pg. .}}
+{\color{red}\textit{If only the First Nocturn is said, then Lauds is immediately recited. Otherwise, if Lauds is to be omitted, then continue with the Pater Noster and prayers beginning on pg. 19.}}
  
 \vfill\pagebreak
 
@@ -414,7 +414,7 @@
 
 %%
  
-\vfill\pagebreak %\hspace{2cm}
+\vfill\pagebreak %\vspace{2cm}
  
 \textit{The sins of my youth and my offences, do not remember, O Lord.}
 \gresetinitiallines{1}
@@ -529,7 +529,7 @@
 
 %%
 
-\hspace{2cm}
+\vspace{2cm}
 
 \textit{I believe that I shall see the good things of the Lord in the land of the living.}
 \gresetinitiallines{1}
@@ -691,7 +691,7 @@
 }
 \end{latinenglishsection}
 
-{\color{red}\textit{If only the Second Nocturn is said, then Lauds is immediately recited (pg. ). Otherwise, if Lauds is to be omitted, then continue with the Pater Noster and prayers beginning on pg. .}}
+{\color{red}\textit{If only the Second Nocturn is said, then Lauds is immediately recited. Otherwise, if Lauds is to be omitted, then continue with the Pater Noster and prayers beginning on pg. 19.}}
  
  \vfill\pagebreak
  
@@ -819,7 +819,7 @@
  
  %%
  
-\hspace{2cm}
+\vspace{2cm}
  
 \textit{Heal my soul, O Lord, for I have sinned against Thee.}
 \gresetinitiallines{1}
@@ -898,7 +898,7 @@
 
 %%
 
-\hspace{2cm}
+\vfill\pagebreak
 
 \textit{My soul has thirsted after the living God: when shall I come and appear before the face of the Lord?}
 \gresetinitiallines{1}
@@ -999,7 +999,7 @@
 }
 \end{latinenglishsection}
 
-\vfill\pagebreak
+%\vfill\pagebreak
  
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -1090,6 +1090,76 @@
 \end{latinenglishsection}
 
 {\color{red}\textit{Here Lauds follows immediately. Or if Lauds are omitted, after the last Responsory the Pater Noster and the relevant prayer(s) on the following page is/are said.}}
+
+\vfill\pagebreak
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{center}
+{\color{red}\textit{The Pater Noster and the following prayers are said kneeling. The Officiant leads the Pater Noster.}}
+\end{center}
+
+\begin{latinenglishsection} 
+\latinenglish{
+	Pater Noster, ... {\color{red}secreto}
+	
+	{\color{red}\Vbar.} Et ne nos ind\'{u}cas in tentati\'{o}nem.
+	
+	{\color{red}\Rbar.} Sed l\'{i}bera nos a malo.
+	
+	{\color{red}\Vbar.} A porta \'{i}nferi.
+	
+	{\color{red}\Rbar.} Erue, D\'{o}mine, \'{a}nimam eius (\'{a}nimas e\'{o}rum).
+	
+	{\color{red}\Vbar.} Requi\'{e}sca(n)t in pace.
+	
+	{\color{red}\Rbar.} Amen.
+	
+	{\color{red}\Vbar.} D\'{o}mine, ex\'{a}udi orati\'{o}nem meam.
+	
+	{\color{red}\Rbar.} Et clamor meus ad te v\'{e}niat.
+}{
+	Our Father, ... {\color{red}silent until}
+	
+	{\color{red}\Vbar.} And lead us not into temptation.
+	
+	{\color{red}\Rbar.} But deliver us from evil.
+	
+	{\color{red}\Vbar.} From the gates of hell.
+	
+	{\color{red}\Rbar.} Deliver their souls, O Lord.
+	
+	{\color{red}\Vbar.} May they rest in peace.
+	
+	{\color{red}\Rbar.} Amen.
+	
+	{\color{red}\Vbar.} O Lord, hear my prayer.
+	
+	{\color{red}\Rbar.} And let my cry come unto Thee.
+}
+\end{latinenglishsection}
+
+\begin{center}
+{\color{red}\textit{If a priest or deacon presides:}}
+\end{center}
+
+\begin{latinenglishsection} 
+\latinenglish{
+	{\color{red}\Vbar.} D\'{o}minus vob\'{i}scum.
+	
+	{\color{red}\Rbar.} Et cum spiritu tuo.
+	
+	Or\'{e}mus.
+}{
+	{\color{red}\Vbar.} The Lord be with you.
+	
+	{\color{red}\Rbar.} And with thy spirit.
+}
+\end{latinenglishsection}
+
+\begin{center}
+{\color{red}\textit{The appropriate Collect is said from below, followed by the rest on the bottom of page 24.}}
+\end{center}
 
 \vfill\pagebreak
 
